@@ -1,3 +1,7 @@
+2012-09-09 Borut Razem <borut.razem AT siol.net>
+	* scripts/build/mingw/do_setup.sh: 
+	  detect gputils version from configure.ac, cygwin gcc-4
+
 2012-09-02 Molnar Karoly <proton7@freemail.hu>
 	* tools/config-help.pl: Help unto the "--verbose" switch.
 
